# face-expression-recognition

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.extend.yml
app/: explainers.py  main.py  settings.py  utils.py
app/pages/: 1-data_collection.py  2-data_processing.py  3-model_training.py  4-inference.py  page_collect_data.py  page_face_mesh.py  page_inference.py
app/src/components/: __init__.py  data_collection.py  explainers.py  inference.py  model_training.py  project_description.py
